:green_heart: build(ci): 优化 Termius 安装流程避免精确查询导致获取不到最新版本
- 修改 Chocolatey 搜索命令以获取最新版本
- 在安装命令中指定版本号
- 更新安装日志以显示具体版本信息

--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -11,6 +11,7 @@ jobs:
     with:
       platform: windows
       version_command: |
-        termius_version=$(choco search termius --exact | grep -Eo 'termius\s+([0-9]+\.[0-9]+\.[0-9]+)' | awk '{print $2}')
-      install_command: choco install termius -y --no-progress
+        termius_version=$(choco search termius | grep -Eo 'termius\s+([0-9]+\.[0-9]+\.[0-9]+)' | awk '{print $2}')
+      install_command: |
+        choco install termius -y --no-progress --version=$TERMIUS_VERSION
       source_path: $HOME/AppData/Local/Programs/Termius/resources/app.asar
